# PushPilot

./: .gitignore  README.md  autocommit.py  autocommit_app.py  autocommit_gui.py  build_linux.sh  pyproject.toml
autocommitter/: app.py  core.py  gui.py
